package modele;

public class Abonne extends Client{
	private int numAbonne;
	
	public Abonne() {
		this.numAbonne = 666;
		// TODO Auto-generated constructor stub
	}

	public int getNumAbonne() {
		return numAbonne;
	}

	public void setNumAbonne(int numAbonne) {
		this.numAbonne = numAbonne;
	}
	
	public void makeEntretiens(){
		//TODO
	}
}
