package modele;

public class Borne {

}
