package modele;

public class Camera {

}
