package modele;

public class Teleporteur {

}
