package modele;

public class Ticket {

}
