package modele;

public class Vehicule {

}
